# yolo-inference

./: CMakeLists.txt  README.md  main.cpp
include/: inference.h  tools.h
src/: inference.cpp  tools.cpp
